# edu-task-manager

./: .env_exmaple  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  drafts.py  manage.py  pyproject.toml  requirements.txt  runtime.txt  setup.cfg  xxx.py
.github/workflows/: check.yml  task-manager-check.yml
staticfiles/: staticfiles.json
task_manager/: settings.py  urls.py  wsgi.py
task_manager_site/: asgi.py  settings.py  wsgi.py
tasks/: admin.py  filters.py  forms.py  misc.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: data.json  label_data.json  status_data.json  task_data.json
tasks/locale/en/LC_MESSAGES/: django.mo  django.po
tasks/migrations/: 0001_initial.py  0002_auto_20210723_0217.py  0002_rename_release_date_status_create_date.py  0003_alter_status_name.py  0004_alter_status_create_date.py  0005_auto_20210718_0112.py  0006_task.py  0007_auto_20210718_1415.py  0008_auto_20210718_1513.py  0009_label.py  0010_auto_20210720_2351.py  0011_alter_task_labels.py
tasks/templates/tasks/: base.html  bootstrap.html  index.html  label_create.html  label_delete.html  label_list.html  label_update.html  status_create.html  status_delete.html  status_list.html  status_update.html  task.html  task_create.html  task_delete.html  task_list.html  task_update.html  user_create.html  user_delete.html  user_list.html  user_login.html  user_update.html
tasks/tests/: base.py  tests.py
tasks/views/: __init__.py  label_views.py  status_views.py  task_views.py  user_views.py
