[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ramil Gadzhiev <rami.gaggi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = {version = "^2.9.1", optional = true}
psycopg2 = {version = "^2.9.1", optional = true}
Django = "^3.2.5"
dj-database-url = "^0.5.0"
python-dotenv = "^0.18.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^3.0.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
coverage = "^5.5"
Faker = "^8.9.1"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
psycopg2-binary = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


