[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ramil Gadzhiev <rami.gaggi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
psycopg2-binary = {version = "^2.9.1", optional = true}
psycopg2 = {version = "^2.9.1", optional = true}
dj-database-url = "^0.5.0"
python-dotenv = "^0.18.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^3.0.1"
whitenoise = "^5.2.0"
Django = "^3.2.5"
django-extensions = "^3.1.3"
django-filter = "^2.4.0"
rollbar = "^0.16.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
coverage = "^5.5"
Faker = "^8.9.1"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
psycopg2-binary = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


